--- a/public/register.html
+++ b/public/register.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Registro - FIXALL</title>
+<title>Register - FIXALL</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <style>
@@ -32,7 +32,7 @@ body {
     box-sizing: border-box;
 }
 
-/* FIX: WRAPPER so it stays centered ALWAYS */
+/* WRAPPER */
 .wrapper {
     width: 100%;
     max-width: 450px;
@@ -71,7 +71,7 @@ h2 {
     margin-bottom: 18px;
 }
 
-/* LABEL + INPUT */
+/* LABEL */
 label {
     display: block;
     margin-top: 14px;
@@ -80,12 +80,13 @@ label {
     color: var(--text-soft);
 }
 
+/* INPUTS & SELECT */
 input, select {
     width: 100%;
     padding: 14px;
     margin-top: 6px;
     border-radius: 14px;
-    background: rgba(255,255,255,0.06);
+    background: rgba(255,255,255,0.08);
     border: 1px solid var(--border);
     font-size: 16px;
     color: var(--text-main);
@@ -100,6 +101,12 @@ input:focus, select:focus {
 
 input::placeholder {
     color: #c7c9e8;
+}
+
+/* FIX SELECT DROPDOWN */
+select, select option {
+    background-color: #1a1633; /* dark background so text is visible */
+    color: white;
 }
 
 /* BUTTON */
@@ -136,42 +143,43 @@ button:active {
 
     <div class="box">
         <div class="logo">FIXALL</div>
-        <h2>Crear Cuenta</h2>
+        <h2>Create Account</h2>
 
-        <label>Nombre Completo</label>
-        <input id="name" type="text" placeholder="Juan Pérez">
+        <label>Full Name</label>
+        <input id="name" type="text" placeholder="John Doe">
 
-        <label>Correo Electrónico</label>
-        <input id="email" type="email" placeholder="correo@ejemplo.com">
+        <label>Email</label>
+        <input id="email" type="email" placeholder="example@email.com">
 
-        <label>Contraseña</label>
+        <label>Password</label>
         <input id="password" type="password" placeholder="********">
 
-        <label>Número de Celular</label>
+        <label>Phone Number</label>
         <input id="phone" type="tel" placeholder="305-555-1234">
 
-        <label>Calle y número</label>
+        <label>Street Address</label>
         <input id="street" type="text" placeholder="123 Main St">
 
-        <label>Ciudad</label>
+        <label>City</label>
         <input id="city" type="text" placeholder="Cleveland">
 
-        <label>Estado</label>
+        <label>State</label>
         <select id="state">
-            <option value="">Selecciona tu estado</option>
+            <option value="">Select your state</option>
             <option>Ohio</option>
         </select>
 
-        <label>Código Postal (ZIP)</label>
-        <input id="zipcode" type="text" placeholder="Ej: 44101">
+        <label>ZIP Code</label>
+        <input id="zipcode" type="text" placeholder="Example: 44101">
 
-        <label>Tipo de Cuenta</label>
+        <label>Account Type</label>
         <select id="role">
-            <option value="client">Cliente</option>
-            <option value="worker">Trabajador</option>
+            <option value="">Select an option</option>
+            <option value="client">Client</option>
+            <option value="worker">Worker</option>
         </select>
 
-        <button id="registerBtn">Registrarme</button>
+        <button id="registerBtn">Register</button>
     </div>
 
 </div>
